【框架】aes cpu ini

--- a/base/base/base.vcxproj
+++ b/base/base/base.vcxproj
@@ -166,9 +166,11 @@
     <ClInclude Include="..\common\assist\assistobjs\Impl\SingletonImpl.h" />
     <ClInclude Include="..\common\assist\assistobjs\Impl\SmartPtr.h" />
     <ClInclude Include="..\common\assist\assistobjs\Impl\SmartPtrImpl.h" />
+    <ClInclude Include="..\common\assist\utils\Defs\FS_IPUtilDefs.h" />
     <ClInclude Include="..\common\assist\utils\Impl\FS_CpuUtil.h" />
     <ClInclude Include="..\common\assist\utils\Impl\FS_DirectoryUtil.h" />
     <ClInclude Include="..\common\assist\utils\Impl\FS_FileUtil.h" />
+    <ClInclude Include="..\common\assist\utils\Impl\FS_IPUtil.h" />
     <ClInclude Include="..\common\assist\utils\Impl\STLUtil.h" />
     <ClInclude Include="..\common\assist\utils\Impl\STLUtilImpl.h" />
     <ClInclude Include="..\common\assist\utils\Impl\StringUtil.h" />
@@ -203,13 +205,17 @@
     <ClInclude Include="..\common\basedefs\Structure\structure.h" />
     <ClInclude Include="..\common\common.h" />
     <ClInclude Include="..\common\component\component.h" />
+    <ClInclude Include="..\common\component\Defs\FS_AesDefs.h" />
     <ClInclude Include="..\common\component\Defs\TriggerDefs.h" />
+    <ClInclude Include="..\common\component\Impl\AesHandle.h" />
     <ClInclude Include="..\common\component\Impl\BufferAddapter.h" />
     <ClInclude Include="..\common\component\Impl\BufferAddapterImpl.h" />
     <ClInclude Include="..\common\component\Impl\File\Defs\FileDefs.h" />
     <ClInclude Include="..\common\component\Impl\File\FS_File.h" />
+    <ClInclude Include="..\common\component\Impl\File\FS_IniFile.h" />
     <ClInclude Include="..\common\component\Impl\File\LogFile.h" />
     <ClInclude Include="..\common\component\Impl\File\LogFileImpl.h" />
+    <ClInclude Include="..\common\component\Impl\FS_Aes.h" />
     <ClInclude Include="..\common\component\Impl\FS_ArgsExpander.h" />
     <ClInclude Include="..\common\component\Impl\FS_ArgsExpanderImpl.h" />
     <ClInclude Include="..\common\component\Impl\FS_ClassFactory.h" />
@@ -242,6 +248,7 @@
     <ClCompile Include="..\common\assist\utils\Impl\FS_CpuUtil.cpp" />
     <ClCompile Include="..\common\assist\utils\Impl\FS_DirectoryUtil.cpp" />
     <ClCompile Include="..\common\assist\utils\Impl\FS_FileUtil.cpp" />
+    <ClCompile Include="..\common\assist\utils\Impl\FS_IPUtil.cpp" />
     <ClCompile Include="..\common\assist\utils\Impl\StringUtil.cpp" />
     <ClCompile Include="..\common\assist\utils\Impl\ThreadUtil.cpp" />
     <ClCompile Include="..\common\assist\utils\Impl\TimeUtil.cpp" />
@@ -252,8 +259,11 @@
     <ClCompile Include="..\common\asyn\Lock\Impl\Locker.cpp" />
     <ClCompile Include="..\common\basedefs\DataType\InnerDataType\Defs\LockerHandle.cpp" />
     <ClCompile Include="..\common\component\Defs\TriggerDefs.cpp" />
+    <ClCompile Include="..\common\component\Impl\AesHandle.cpp" />
     <ClCompile Include="..\common\component\Impl\File\FS_File.cpp" />
+    <ClCompile Include="..\common\component\Impl\File\FS_IniFile.cpp" />
     <ClCompile Include="..\common\component\Impl\File\LogFile.cpp" />
+    <ClCompile Include="..\common\component\Impl\FS_Aes.cpp" />
     <ClCompile Include="..\common\component\Impl\FS_String.cpp" />
     <ClCompile Include="..\common\component\Impl\FS_ThreadPool.cpp" />
     <ClCompile Include="..\common\component\Impl\SmartVar.cpp" />
