--- a/TestSuit/TestSuit/TestSuit.vcxproj
+++ b/TestSuit/TestSuit/TestSuit.vcxproj
@@ -130,6 +130,7 @@
     <ClInclude Include="TestInst\TestFSDirectory.h" />
     <ClInclude Include="TestInst\TestFSFileUtil.h" />
     <ClInclude Include="TestInst\TestJson.h" />
+    <ClInclude Include="TestInst\TestLogFile.h" />
     <ClInclude Include="TestInst\TestString.h" />
     <ClInclude Include="TestInst\TestThreadPool.h" />
     <ClInclude Include="TestInst\TestTime.h" />
