--- a/base/base/base.vcxproj
+++ b/base/base/base.vcxproj
@@ -207,7 +207,8 @@
     <ClInclude Include="..\common\component\component.h" />
     <ClInclude Include="..\common\component\Defs\FS_AesDefs.h" />
     <ClInclude Include="..\common\component\Defs\TriggerDefs.h" />
-    <ClInclude Include="..\common\component\Impl\AesHandle.h" />
+    <ClInclude Include="..\common\component\Impl\Aes\AesHandle.h" />
+    <ClInclude Include="..\common\component\Impl\Aes\FS_Aes.h" />
     <ClInclude Include="..\common\component\Impl\BufferAddapter.h" />
     <ClInclude Include="..\common\component\Impl\BufferAddapterImpl.h" />
     <ClInclude Include="..\common\component\Impl\File\Defs\FileDefs.h" />
@@ -215,13 +216,14 @@
     <ClInclude Include="..\common\component\Impl\File\FS_IniFile.h" />
     <ClInclude Include="..\common\component\Impl\File\LogFile.h" />
     <ClInclude Include="..\common\component\Impl\File\LogFileImpl.h" />
-    <ClInclude Include="..\common\component\Impl\FS_Aes.h" />
     <ClInclude Include="..\common\component\Impl\FS_ArgsExpander.h" />
     <ClInclude Include="..\common\component\Impl\FS_ArgsExpanderImpl.h" />
     <ClInclude Include="..\common\component\Impl\FS_ClassFactory.h" />
     <ClInclude Include="..\common\component\Impl\FS_ClassFactoryImpl.h" />
     <ClInclude Include="..\common\component\Impl\FS_Delegate.h" />
     <ClInclude Include="..\common\component\Impl\FS_DelegateImpl.h" />
+    <ClInclude Include="..\common\component\Impl\FS_Random.h" />
+    <ClInclude Include="..\common\component\Impl\FS_RandomImpl.h" />
     <ClInclude Include="..\common\component\Impl\FS_String.h" />
     <ClInclude Include="..\common\component\Impl\FS_StringImpl.h" />
     <ClInclude Include="..\common\component\Impl\FS_ThreadPool.h" />
@@ -259,11 +261,11 @@
     <ClCompile Include="..\common\asyn\Lock\Impl\Locker.cpp" />
     <ClCompile Include="..\common\basedefs\DataType\InnerDataType\Defs\LockerHandle.cpp" />
     <ClCompile Include="..\common\component\Defs\TriggerDefs.cpp" />
-    <ClCompile Include="..\common\component\Impl\AesHandle.cpp" />
+    <ClCompile Include="..\common\component\Impl\Aes\AesHandle.cpp" />
+    <ClCompile Include="..\common\component\Impl\Aes\FS_Aes.cpp" />
     <ClCompile Include="..\common\component\Impl\File\FS_File.cpp" />
     <ClCompile Include="..\common\component\Impl\File\FS_IniFile.cpp" />
     <ClCompile Include="..\common\component\Impl\File\LogFile.cpp" />
-    <ClCompile Include="..\common\component\Impl\FS_Aes.cpp" />
     <ClCompile Include="..\common\component\Impl\FS_String.cpp" />
     <ClCompile Include="..\common\component\Impl\FS_ThreadPool.cpp" />
     <ClCompile Include="..\common\component\Impl\SmartVar.cpp" />
