--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,42 @@ cmake_install.cmake
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
+/base/base/x64/Debug/*.idb
+/TestSuit/TestSuit/x64/Debug/*.idb
+/sln/windows/frightenstone/x64/Debug/*.ilk
+/sln/windows/frightenstone/frightenstone/x64/Debug/*.intermediate
+/sln/windows/frightenstone/.vs/frightenstone/v15/ipch/*.ipch
+/sln/windows/frightenstone/.vs/frightenstone/v15/ipch/AutoPCH/45560e1d38be201a/*.ipch
+/sln/windows/frightenstone/.vs/frightenstone/v15/ipch/AutoPCH/a5c95df1be6ea0e5/*.ipch
+/sln/windows/frightenstone/.vs/frightenstone/v15/ipch/AutoPCH/a940dfab6290b271/*.ipch
+/base/base/x64/Debug/base.tlog/*.lastbuildstate
+/TcpPort/Client/Client/x64/Debug/Client.tlog/*.lastbuildstate
+/TcpPort/Server/Server/x64/Debug/Server.tlog/*.lastbuildstate
+/TestSuit/TestSuit/x64/Debug/TestSuit.tlog/*.lastbuildstate
+/sln/windows/frightenstone/x64/Debug/*.lib
+/base/base/x64/Debug/*.log
+/sln/windows/frightenstone/frightenstone/x64/Debug/*.log
+/TcpPort/Client/Client/x64/Debug/*.log
+/TcpPort/Server/Server/x64/Debug/*.log
+/TestSuit/TestSuit/*.log
+/TestSuit/TestSuit/x64/Debug/*.log
+/base/common/component/Impl/Aes/*.md
+/base/base/x64/Debug/*.obj
+/TestSuit/TestSuit/x64/Debug/*.obj
+/sln/windows/frightenstone/.vs/frightenstone/v15/*.opendb
+/base/base/x64/Debug/*.pch
+/base/base/x64/Debug/*.pdb
+/sln/windows/frightenstone/x64/Debug/*.pdb
+/TestSuit/TestSuit/x64/Debug/*.pdb
+/sln/windows/frightenstone/.vs/frightenstone/v15/*.suo
+/base/base/x64/Debug/base.tlog/*.tlog
+/TcpPort/Client/Client/x64/Debug/Client.tlog/*.tlog
+/TcpPort/Server/Server/x64/Debug/Server.tlog/*.tlog
+/TestSuit/TestSuit/x64/Debug/TestSuit.tlog/*.tlog
+/sln/windows/frightenstone/.vs/config/*.config
+/sln/windows/frightenstone/.vs/frightenstone/v15/*.db
+/sln/windows/frightenstone/.vs/frightenstone/v15/*.db-shm
+/sln/windows/frightenstone/.vs/frightenstone/v15/*.db-wal
+/sln/windows/frightenstone/x64/Debug/*.dll
+/sln/windows/frightenstone/x64/Debug/*.exe
+/sln/windows/frightenstone/x64/Debug/*.exp
