--- a/TestSuit/TestSuit/TestSuit.vcxproj.filters
+++ b/TestSuit/TestSuit/TestSuit.vcxproj.filters
@@ -54,9 +54,18 @@
     <ClInclude Include="TestInst\TestRandom.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="TestInst\TestAes.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="TestInst\rijndael.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TestInst\rijndael.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
