【框架】移植tiny-utf8(attention性能上需要后期继续优化) 开启c++17支持 singleton改造（c++17移除了auto_ptr）

--- a/TcpPort/Server/Server/Server.vcxproj
+++ b/TcpPort/Server/Server/Server.vcxproj
@@ -93,6 +93,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>$(SolutionDir)..\..\..\;$(ProjectDir);$(SolutionDir)..\..\..\TcpPort\Server\;$(ProjectDir)\;</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -147,6 +148,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>$(SolutionDir)..\..\..\;$(ProjectDir);$(SolutionDir)..\..\..\TcpPort\Server\;$(ProjectDir)\;</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
