【框架】bitutil testutf8

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,24 @@ CTestTestfile.cmake
 /sln/windows/frightenstone/.vs/frightenstone/v15/ipch/AutoPCH/84abb1df9dcef19c/*.ipch
 /sln/windows/frightenstone/.vs/frightenstone/v15/ipch/AutoPCH/b8577f80ffb156f/*.ipch
 /sln/windows/frightenstone/.vs/frightenstone/v15/ipch/AutoPCH/c9b4e5540166e45f/*.ipch
+/3rd/tiny-utf8/.travis.yml
+/TcpPort/Client/Client/x64/Debug/Client.obj
+/TcpPort/Client/Client/x64/Debug/Client.pch
+/TcpPort/Client/Client/x64/Debug/InitProcess.obj
+/TcpPort/Client/Client/x64/Debug/TcpClient.obj
+/TcpPort/Client/Client/x64/Debug/stdafx.obj
+/TcpPort/Client/Client/x64/Debug/vc141.idb
+/TcpPort/Client/Client/x64/Debug/vc141.pdb
+/TcpPort/Server/Server/x64/Debug/ClientSocket.obj
+/TcpPort/Server/Server/x64/Debug/InitProcess.obj
+/TcpPort/Server/Server/x64/Debug/Server.obj
+/TcpPort/Server/Server/x64/Debug/Server.pch
+/TcpPort/Server/Server/x64/Debug/TcpServer.obj
+/TcpPort/Server/Server/x64/Debug/pch.obj
+/TcpPort/Server/Server/x64/Debug/vc141.idb
+/TcpPort/Server/Server/x64/Debug/vc141.pdb
+/sln/windows/frightenstone/.vs/frightenstone/v15/ipch/AutoPCH/2ac0f4f0757907cd/TINYUTF8.ipch
+/sln/windows/frightenstone/.vs/frightenstone/v15/ipch/AutoPCH/369e86b485c922e/TESTUTF8.ipch
+/sln/windows/frightenstone/.vs/frightenstone/v15/ipch/AutoPCH/8447116a1da9259b/RIJNDAEL.ipch
+/sln/windows/frightenstone/.vs/frightenstone/v15/ipch/AutoPCH/ea07ff9ec6e7ac0f/RIJNDAEL.ipch
+/所需移植组件.docx
