--- a/TestSuit/TestSuit/TestSuit.vcxproj
+++ b/TestSuit/TestSuit/TestSuit.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="TestInst\TestThreadPool.h" />
     <ClInclude Include="TestInst\TestTime.h" />
     <ClInclude Include="TestInst\TestTrigger.h" />
+    <ClInclude Include="TestInst\TestUtf8.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
