--- a/TestSuit/TestSuit/TestSuit.vcxproj.filters
+++ b/TestSuit/TestSuit/TestSuit.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="TestInst\TestUtf8.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="TestInst\TerstSmartVar.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
